change to postgres

--- a/.env.prod
+++ b/.env.prod
@@ -4,7 +4,7 @@ MYSQL_PASSWORD=password
 MYSQL_ROOT_PASSWORD=password
 MYSQL_DATABASE=database
 
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=a64bd068aeb05abdf4292a8423ec20d8
 
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?serverVersion=13&charset=utf8
