--- a/.env.test
+++ b/.env.test
@@ -6,4 +6,8 @@ PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 
 APP_ENV=test
-DATABASE_URL="mysql://user:password@database:3306/test_test?serverVersion=5.7"
+POSTGRES_DB=symfony_test
+POSTGRES_USER=symfony
+POSTGRES_PASSWORD=symfony
+
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?serverVersion=13&charset=utf8
