--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 
 services:
     php:
+        container_name: php-nginx
         image: webdevops/php-nginx-dev:8.2
         volumes:
             - ./:/app
@@ -29,20 +30,22 @@ services:
             - appnet
 
     database:
-        image: mysql:5.7.40
-        volumes:
-            - ./docker/mysql_database:/var/lib/mysql/
-        environment:
-            MYSQL_USER: ${MYSQL_USER}
-            MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-            MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-            MYSQL_DATABASE: ${MYSQL_DATABASE}
+        container_name: db
+        image: postgres:16
         ports:
-            - "3307:3306"
+            - '5432:5432'
+        restart: always
+        volumes:
+            - ./docker/data/db:/var/lib/postgresql/data
+        environment:
+            - POSTGRES_DB=${POSTGRES_DB}
+            - POSTGRES_USER=${POSTGRES_USER}
+            - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
         networks:
             - appnet
 
     nodejs:
+        container_name: node-js
         image: node:14-alpine
         volumes:
             - ./:/app
@@ -56,6 +59,3 @@ networks:
     appnet:
         driver: "bridge"
 
-volumes:
-    mysql_data:
-        driver: "local"
