--- a/composer.json
+++ b/composer.json
@@ -68,8 +68,10 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
+        "roave/security-advisories": "dev-latest",
         "symfony/browser-kit": "6.4.*",
         "symfony/css-selector": "6.4.*",
+        "symfony/maker-bundle": "^1.52",
         "symfony/phpunit-bridge": "^7.0"
     }
 }
