--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.4.*",
         "symfony/runtime": "6.4.*",
+        "symfony/twig-bundle": "6.4.*",
         "symfony/webpack-encore-bundle": "^2.0",
         "symfony/yaml": "6.4.*"
     },
